# market-analyzer

./: .dockerignore  .env.example  .eslintignore  .gitattributes  .gitignore  .gitleaks.toml  .prettierignore  .worktree-context.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.worktree.yml  package.json
.claude/: commands  settings.json  settings.local.json.template
.claude/agents/: README.md  architect.md  code-reviewer.md  designer.md  implementer.md  pdm.md  qa.md  repo-explorer.md  reviewer.md  security-auditor.md  test-runner.md
.claude/commands/: deps-audit.md  fix-ci.md  kickoff.md  pr-check.md  review.md  spec.md
.claude/hooks/: post-edit.sh  pre-bash.sh
.claude/rules/: 00-core.md  01-core.md  01-typescript.md  02-api.md  02-backend.md  03-frontend.md  04-security.md  05-quality.md
.devcontainer/: Dockerfile  Dockerfile.dev  allowlist.domains  devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: 01_spec.md  03_implement.md
.husky/: pre-commit
.repo/: active-stack
docs/: devcontainer.md  guardrails.md
infra/: docker-compose.traefik.yml
projects/: .eslintrc.cjs  docker-compose.yaml  eslint.config.js  package.json  pnpm-lock.yaml
scripts/: init-environment.sh
stacks/python_ruff_pytest/scaffold/: Dockerfile.dev  docker-compose.yaml  pyproject.toml
stacks/python_ruff_pytest/scaffold/src/app/: main.py  server.py
stacks/python_ruff_pytest/scaffold/tests/: test_main.py
tools/: e2e-test.sh
(+541 files in other folders)
